# macsl

./: .gitignore  README.md  dune-project  frama-c-dual-tp-spec.md  happy-roadmap.md  macsl-impl.md  macsl.opam
.github/workflows/: axiom-wp.yml  coqwp.yml
axiom-wp/: DUALTP-STATUS.md  dualtp-registry.json
axiom-wp/coqwp/: AUDIT.md  ArcTrigo_hardened.v  Cfloat_hardened.v  ExpLog_hardened.v  README.md  Trigonometry_hardened.v  Vset_hardened.v  check.sh
axiom-wp/dualtp/: README.md  canonical.py  check.sh  corpus.py  crosscheck.py  pairs.py  test_canonical.py
axiom-wp/leanwp/: Memory.lean  Vset.lean  check.sh
axiom-wp/leg1/: BUILD.md  Model.v  README.md  SeparatedTrans.v  dune.leg1-theory  why3-separated_trans.mlw
coqwp/: AUDIT.md  Memory_hardened.v  check.sh
docs/: design.md  happy-roadmap.md  macsl-impl.md  usage.md  ws-mechanisms.md
glossary/: glossary.md
real-use-case/: mbedtls-ebios-gaps.md  mbedtls-ebios-report.md  mbedtls-found-issues.md
src/: dune  macsl.ml
tests/: README.md  run.sh
tests/phase0/: writing_neg.c  writing_pos.c  zero_targets.c
tests/phase1/: reading_neg.c  reading_pos.c
tests/phase10/: flow_neg.c  flow_pos.c
tests/phase11/: cost_declassify.c  cost_neg.c  cost_pos.c
tests/phase2/: audit_neg.c  audit_pos.c  immut_neg.c  immut_pos.c
tests/phase3/: priv_neg.c  priv_pos.c
tests/phase4/: authn_neg.c  authn_pos.c
tests/phase5/: noninterf_neg.c  noninterf_pos.c
tests/phase6/: totality_neg.c  totality_pos.c
tests/phase7/: race_audit_neg.c  race_audit_pos.c  race_priv_neg.c  race_priv_pos.c  race_session_neg.c  (+3 more)
(+28 files in other folders)
